[package]
name = "params"
version = "0.3.1"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>"]
description = "A multi-source request parameters parser for Iron."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iron/params"
documentation = "http://ironframework.io/doc/params/index.html"

[dependencies]
bodyparser = "0.4"
iron = "0.4"
num = "0.1"
plugin = "0.2"
serde = { version = "0.8", optional = true }
serde_json = "0.8"
urlencoded = "0.4"

[dependencies.multipart]
features = ["server"]
version = "0.7"

[dev-dependencies]
maplit = "0.1"
