[package]
name = "params"
version = "0.7.1"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>"]
description = "A multi-source request parameters parser for Iron."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iron/params"
documentation = "http://ironframework.io/doc/params/index.html"

[dependencies]
bodyparser = "0.8"
iron = "0.6"
num = "0.1"
plugin = "0.2"
serde = { version = "1.0", optional = true }
serde_json = "1.0"
urlencoded = "0.6"
tempdir = "0.3"

[dependencies.multipart]
default-features = false
features = ["server"]
version = "0.13"

[dev-dependencies]
maplit = "0.1"
